[gd_scene load_steps=4 format=3 uid="uid://bwhc55ykubebp"]

[ext_resource type="Script" path="res://Scenes/end_game.gd" id="1_2ta0w"]
[ext_resource type="FontFile" uid="uid://bk2cl11dc5wvh" path="res://Assets/ARCADECLASSIC.TTF" id="1_h5kkq"]

[sub_resource type="LabelSettings" id="LabelSettings_36o10"]
font = ExtResource("1_h5kkq")
font_size = 24
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.956863)

[node name="EndGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ta0w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 359.0
offset_bottom = 321.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="WinorLose" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "WIN OR LOSE"
label_settings = SubResource("LabelSettings_36o10")
horizontal_alignment = 1

[node name="Achieve" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Achievements:"
label_settings = SubResource("LabelSettings_36o10")
horizontal_alignment = 1

[node name="NoDamage" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Achievements:"
label_settings = SubResource("LabelSettings_36o10")
horizontal_alignment = 1

[node name="KillAll" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Achievements:"
label_settings = SubResource("LabelSettings_36o10")
horizontal_alignment = 1

[node name="Finish Speech" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Achievements:"
label_settings = SubResource("LabelSettings_36o10")
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
